# solana-multisigwallet

./: Cargo.toml  README.md
js/: .eslintrc.cjs  .eslintrc.js  index.html  index.js  lib.js  multisig_test.js  package-lock.json  package.json  state.js
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
