[package]
name = "chainkeepers-multisig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.9.2"

[dev-dependencies]
solana-program-test = "1.9.2"
solana-sdk = "1.9.2"

[lib]
crate-type = ["cdylib", "lib"]
